app_list: Resize icon in search result view

When SetIcon in the SearchResultTileItemview, the icon is not resized
for different display size. Therefore the image quality is bad when the
scale is not 1. Resizing the icon will fix this bug.

Bug: 842997
Test: manual
Change-Id: I00189636fbb2499e778f777d7e93cd60a3cc9057
Reviewed-on: https://chromium-review.googlesource.com/1080011
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563035}
Former-commit-id: 10c002c62a6d5f4cd26065ce4a5c81150a580cd5